[tool.poetry]
name = "recline"
version = "2023.5"
description = "Writing argparse-based command line applications can become tedious, repetitive, and difficult to do right. Relax and let this library free you from that burden."
license = "BSD-3-Clause"
authors = ["NetApp <ng-netapp-oss@netapp.com>"]
readme = "README.md"

homepage = "https://github.com/NetApp/recline"
repository = "https://github.com/NetApp/recline"
documentation = "https://netapp.github.io/recline"
keywords = ["cli", "interactive", "shell", "argparse", "recline"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]

packages = [
    { include = "recline" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7.2,<4"
windows-curses = {version = "^2.3.0", markers = "sys_platform == 'win32'"}
pyreadline3 = {version = "^3.4.1", markers = "sys_platform == 'win32'"}

[tool.poetry.dev-dependencies]
pudb = "^2022.1.3"
pylint = "^2.15.8"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
sphinxcontrib-apidoc = "^0.3.0"
importlib-metadata = "^5.1.0"
