[tool.poetry]
name = "recline"
version = "2025.3"
description = "Writing argparse-based command line applications can become tedious, repetitive, and difficult to do right. Relax and let this library free you from that burden."
license = "BSD-3-Clause"
authors = ["NetApp <ng-netapp-oss@netapp.com>"]
readme = "README.md"

homepage = "https://github.com/NetApp/recline"
repository = "https://github.com/NetApp/recline"
documentation = "https://netapp.github.io/recline"
keywords = ["cli", "interactive", "shell", "argparse", "recline"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]

packages = [
    { include = "recline" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
argcomplete = ">=3"
python = ">=3.9.0,<4"
windows-curses = {version = "^2.3.3", markers = "sys_platform == 'win32'"}
pyreadline3 = {version = "^3.4.1", markers = "sys_platform == 'win32'"}

[tool.poetry.dev-dependencies]
pudb = "^2024.1.2"
pylint = "^3.2.6"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-apidoc = "^0.5.0"
importlib-metadata = "^8.2.0"
