[tool.poetry]
name = "recline"
version = "2026.3"
description = "Writing argparse-based command line applications can become tedious, repetitive, and difficult to do right. Relax and let this library free you from that burden."
license = "BSD-3-Clause"
authors = ["NetApp <ng-netapp-oss@netapp.com>"]
readme = "README.md"

homepage = "https://github.com/NetApp/recline"
repository = "https://github.com/NetApp/recline"
documentation = "https://netapp.github.io/recline"
keywords = ["cli", "interactive", "shell", "argparse", "recline"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]

packages = [
    { include = "recline" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
argcomplete = ">=3"
docstring_parser = ">=0.16"
python = ">=3.10.0,<4"
windows-curses = {version = "^2.3.3", markers = "sys_platform == 'win32'"}
pyreadline3 = {version = "^3.4.1", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pudb = "^2025.1.5"
ruff = "^0.15.11"
pytest = "^9.0.2"
pytest-cov = "^7.1.0"
sphinx = "^8.1.0"
sphinx-rtd-theme = "^3.1.0"
sphinxcontrib-apidoc = "^0.6.0"
importlib-metadata = "^9.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


